# Real-time-Face-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: run.sh
src/face_rec_gui/: app.py  config.py  db.py  models.py  ui_label.py  ui_predict.py
tests/: test_config.py  test_imports.py
